random number generator

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
    <div class="container">
      <div class="counter-div">
-       <h1>Random Hex Color Generator</h1>
-       <span class="count-color hex">#ffffff</span>
+       <h1>Random Random Number Generator</h1>
+       <span class="count-color number"></span>
        <hr><br>
        
        <div class="buttons">
